--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS=4hIes0Bb/VE9PB+d/WMf8w==,VYcATR6Af4+kGNdpQ5Q+IA==,3VEhge68J6VeQHRFbH58Zw==,Tgq/cyPC9RC7WfJutDhESQ==
-API_TOKEN_SALT=UCXwQDHqq7YJ44E6ZgMpgg==
-ADMIN_JWT_SECRET=COcvcCpPc8jcVtabZYu9JQ==
+HOST=CHANGE-ME
+PORT=CHANGE-ME
+APP_KEYS=CHANGE-ME
+API_TOKEN_SALT=CHANGE-ME
+ADMIN_JWT_SECRET=CHANGE-ME
 
-DATABASE_HOST=castor.db.elephantsql.com
-DATABASE_PORT=5432
-DATABASE_NAME=jppyebjd
-DATABASE_USERNAME=jppyebjd
-DATABASE_PASSWORD=11yVjP1NT-0-9Dyx001lZTyrme8Ws1mU
-DATABASE_SSL=true
+DATABASE_HOST=CHANGE-ME
+DATABASE_PORT=CHANGE-ME
+DATABASE_NAME=CHANGE-ME
+DATABASE_USERNAME=CHANGE-ME
+DATABASE_PASSWORD=CHANGE-ME
+DATABASE_SSL=CHANGE-ME
 
-JWT_SECRET=B+LlieRs9VNZ7w/KfotjQA==
+CLOUDINARY_NAME=CHANGE-ME
+CLOUDINARY_KEY=CHANGE-ME
+CLOUDINARY_SECRET=CHANGE-ME
 
-CLOUDINARY_NAME=dfywudrm2
-CLOUDINARY_KEY=757395896341798
-CLOUDINARY_SECRET=ciE7Sj7a1yYcp_ZIukBTThCRd1A
-
+JWT_SECRET=CHANGE-ME
